# MCT

MCT_Ski_Projekt/: ConsoleApplication1.sln
MCT_Ski_Projekt/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  uGUI.cpp  uGUI.h  uGUI_colors.h
MCT_Ski_Projekt/ConsoleApplication1/Debug/: vc142.idb
MCT_Ski_Projekt/ConsoleApplication1/Debug/ConsoleA.5e0ec07b.tlog/: ConsoleApplication1.lastbuildstate
P00_projekt/: CMakeLists.txt  ski.cpp
P00_projekt_Code/: ski.cpp
Video/: Link_zum_Video.txt
